# HighFPSPhysicsFix

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HighFPSPhysicsFix.ini  README.md  vcpkg.json  xmake.lua
.github/workflows/: build.yml
cmake/: Version.h.in  headerlist.cmake  resources.rc.in  sourcelist.cmake
include/: PCH.h  common.h  config.h  data.h  events.h  havok.h  misc.h  osd.h  render.h  resources.h  runtime_value.h  window.h
include/Render/: FramerateLimiter.h
include/ext/: Hash.h  ICommon.h  IHook.h  PerfCounter.h  Utility.h
scripts/: archive_artifacts.py  test_deploy_run.py
src/: dllmain.cpp  events.cpp  havok.cpp  misc.cpp  osd.cpp  papyrus.cpp  render.cpp  window.cpp
src/OS/: SysCall.cpp
src/ext/: IErrors.cpp  INIReader.cpp
